--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "OsdrConnectionSettings": {
-    "ConnectionString": "%OSDR_MONGO_DB%",
-    "DatabaseName": "osdr_dev"
+    "ConnectionString": "%OSDR_MONGO_DB%"
   },
   "MaxRequestSize": 419430400,
   "Logging": {
