--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -2,7 +2,8 @@
   "OsdrConnectionSettings": {
     "ConnectionString": "%OSDR_MONGO_DB%"
   },
-  "MaxRequestSize": 419430400,
+  "MaxRequestSize": "%MAX_BLOB_SIZE%",
+  //419430400,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
