--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -2,8 +2,10 @@
   "OsdrConnectionSettings": {
     "ConnectionString": "%OSDR_MONGO_DB%"
   },
-  "MaxRequestSize": "%MAX_BLOB_SIZE%",
-  //419430400,
+  "BlobsUploadSettings": {
+    "MaxRequestSize": "%MAX_BLOB_SIZE%",
+    "DefaultRequestSize": 30000000
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
