--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -3,8 +3,7 @@
     "ConnectionString": "%OSDR_MONGO_DB%"
   },
   "BlobsUploadSettings": {
-    "MaxRequestSize": "%MAX_BLOB_SIZE%",
-    "DefaultRequestSize": 30000000
+    "MaxRequestSize": "%MAX_BLOB_SIZE%"
   },
   "Logging": {
     "IncludeScopes": false,
