--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -2,7 +2,7 @@
   "OsdrConnectionSettings": {
     "ConnectionString": "%OSDR_MONGO_DB%"
   },
-  "BlobsUploadSettings": {
+  "BlobStorageSettings": {
     "MaxRequestSize": "%MAX_BLOB_SIZE%"
   },
   "Logging": {
