adjust Too Big Body response

--- a/Sds.Storage.Blob.WebApi/appsettings.json
+++ b/Sds.Storage.Blob.WebApi/appsettings.json
@@ -5,14 +5,14 @@
   "BlobStorageSettings": {
     "MaxRequestSize": "%MAX_BLOB_SIZE%"
   },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Information",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
+  //"Logging": {
+  //  "IncludeScopes": false,
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "System": "Information",
+  //    "Microsoft": "Information"
+  //  }
+  //},
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo": [
@@ -23,6 +23,9 @@
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [v{SourceSystemInformationalVersion}] {Message}{NewLine}{Exception}",
           "retainedFileCountLimit": 5
         }
+      },
+      {
+        "Name": "Console"
       }
     ]
   },
