--- a/Sds.Storage.Blob.WebApi/Sds.Storage.Blob.WebApi.csproj
+++ b/Sds.Storage.Blob.WebApi/Sds.Storage.Blob.WebApi.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="Sds.Storage.Blob.GridFS" Version="0.2.3" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
